

-------------
Release Notes
-------------

- Forge freezing during a match bug -
A number of people have reported this bug and we now feel that it may have been fixed in this version. Please play test this version and let us know.

- Skinned titlebar for main window -
Titlebar is now skinned instead of displaying using standard OS window titlebar
Maximizing window now displays full-screen

- Forge now requires Java 7 -
Please update your Java runtime environment. At this point Forge versions 1.4.2 and above will no longer run under Java 6. Those who are using Mac OS should install the JDK version rather than the JRE version.


- The Mac OS X application -
At this time Forge now requires Java 7 and will no longer run under Java 6.

Unfortunately, the Mac OS X builder that we were using does not support Java 7. We hope to find and to use a different Mac OS X builder in order to continue releasing a Mac OS bundled application like we have in the past.

Currently, the windows/unix release of Forge includes a launcher file named "forge.command". Double click on the "forge.command" launcher command file and this will in turn launch the Forge jar file via the terminal application while increasing the Java heap space. This should be a temporary inconvenience.


---------
New Cards
---------

Mausoleum Turnkey
Mana Reflection
Pulse of Llanowar
Deep Water
Naked Singularity
Chaos Moon
Infernal Darkness
Pale Moon


-----------
New Schemes
-----------

Nature Demands an Offering


--------------------
New Vanguard Avatars
--------------------

Mirri


------------
Known Issues
------------

Several people have noticed that the cards displayed on the battlefield will fail to be displayed when the number of cards on the battlefield increases. Maximizing the human panel can help to re-display the cards.
