@@ -14,6 +14,7 @@ A number of people have reported this bug and we now feel that it may have been 
 - Skinned titlebar for main window -
 Titlebar is now skinned instead of displaying using standard OS window titlebar
 Maximizing window now displays full-screen
+Can use Layout > View > Titlebar (F11) to toggle visibility of titlebar (will also open full-screen if hiding titlebar)
 
 - Forge now requires Java 7 -
 Please update your Java runtime environment. At this point Forge versions 1.4.2 and above will no longer run under Java 6. Those who are using Mac OS should install the JDK version rather than the JRE version.
